# nvm-windows-GUI

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  fix_logo.ps1  package-lock.json  package.json  tsconfig.json  webpack.config.js
.agent/rules/: admin-system.md  crm-system.md  e-commerce-frontend.md  e-commerce-merchant-admin.md  e-commerce-operation-admin.md  e-commerce-system.md  erp-system.md
src/: App.tsx  index.css  index.html  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Common/: StyledModal.tsx
src/components/Config/: ConfigWizard.tsx
src/components/Layout/: MainLayout.tsx
src/components/Package/: GlobalPackages.tsx
src/components/Settings/: GlobalPackageSettings.tsx  MirrorSettings.tsx  SettingsPage.tsx
src/components/Version/: VersionInstall.tsx  VersionList.tsx
src/context/: AppContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts
src/locales/: en.ts  zh.ts
src/types/: images.d.ts  tauri.d.ts
src/utils/: tauriBridge.ts  versionUtils.ts
